force-app/main/default/objects/Trip__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <description>Designation of the Trip (Ex: “Trip to Geneva”)</description>
    <label>Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>