force-app/main/default/objects/Trip__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>First day of the Trip</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>