force-app/main/default/objects/Trip__c/fields/Total_Vacation_Days_Required__c.field-meta.xml
<CustomField>
    <fullName>Total_Vacation_Days_Required__c</fullName>
    <formula>(5 * FLOOR( ( End_Date__c  - DATE( 1900, 1, 8) ) / 7 ) 
    + MIN( 5, MOD( End_Date__c - DATE( 1900, 1, 8), 7 )  ) 
) - 
(5 * FLOOR( ( Start_Date__c - DATE( 1900, 1, 8) ) / 7 ) 
      + MIN( 5, MOD( Start_Date__c - DATE( 1900, 1, 8), 7 ) ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Vacation Days Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>