force-app/main/default/objects/Trip__c/validationRules/EndDateEarlierThatStartDate_Trip.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateEarlierThatStartDate_Trip</fullName>
    <active>true</active>
    <description>It should not be possible to select an End date that is earlier than the start date.</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>End Date cannot be earlier than Start Date! Please, select a correct date.</errorMessage>
</ValidationRule>